force-app/main/default/objects/Related_Contacts__c/Related_Contacts__c.object-meta.xml
<CustomObject>
    <label>Related Contacts</label>
    <nameField>
        <displayFormat>RC-{0000}</displayFormat>
        <label>Claim Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Related Contacts</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>