force-app/main/default/objects/Related_Contacts__c/fields/Event_Id__c.field-meta.xml
<CustomField>
    <fullName>Event_Id__c</fullName>
    <label>Event Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>