force-app/main/default/objects/Related_Contacts__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Defense Firm</fullName>
            </value>
            <value>
                <fullName>Claimant Firm</fullName>
            </value>
            <value>
                <fullName>Claimant Attorney</fullName>
            </value>
            <value>
                <fullName>Defense Attorney</fullName>
            </value>
            <value>
                <fullName>Claimant Lawyer</fullName>
            </value>
            <value>
                <fullName>Coverage Firm</fullName>
            </value>
            <value>
                <fullName>Deductible</fullName>
            </value>
            <value>
                <fullName>Defense Expert</fullName>
            </value>
            <value>
                <fullName>Defense Lawyer</fullName>
            </value>
            <value>
                <fullName>Claimant</fullName>
            </value>
            <value>
                <fullName>Defendant</fullName>
            </value>
            <value>
                <fullName>Defense Expert Firm</fullName>
            </value>
            <value>
                <fullName>Defense Lawyer Firm</fullName>
            </value>
            <value>
                <fullName>Coverage Attorney</fullName>
            </value>
            <value>
                <fullName>Claimant Lawyer Firm</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>